# vanguard-promoter

./: .gitignore  Cargo.toml  README.md  agent.idl  push_to_github.bat  skills.md  vanguard_promoter.idl
app/: Cargo.toml
app/examples/: gen_idl.rs
app/src/: lib.rs
app/src/services/: mod.rs  promoter.rs
app/tests/: gtest_tests.rs
bot/: activity.js  cross-app-activity.js  index.js  package-lock.json  package.json
~/.vara-wallet/metadata-cache/: 0xfe1b4c55fd4d668101126434206571a7838a8b6b93a6d1b95d607e78e6c53763-11000.hex
