[package]
name = "vanguard-promoter"
version = "0.1.0"
edition = "2021"

[dependencies]
gstd.workspace = true
sails-rs.workspace = true
parity-scale-codec = { version = "3.7.5", default-features = false, features = ["derive"] }
scale-info = { version = "2.11.6", default-features = false, features = ["derive"] }

[build-dependencies]
sails-idl-gen.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]
